[gd_scene load_steps=3 format=3 uid="uid://yds1ol5iu7n1"]

[ext_resource type="Script" path="res://Calendar/calendar.gd" id="1_bqw5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2tsk"]
bg_color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="Calendar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqw5p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 256.0
offset_top = 68.0
offset_right = 862.0
offset_bottom = 483.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o2tsk")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 194.0
offset_top = -44.0
offset_right = 295.0
offset_bottom = -2.0

[node name="LeftButton" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "←"

[node name="MonthLabel" type="Label" parent="CanvasLayer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(120, 20)
layout_mode = 2

[node name="RightButton" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "→"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.056
offset_left = -1.0
offset_right = 33.532
offset_bottom = 40.0
columns = 7

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2

[node name="VBoxContainer5" type="VBoxContainer" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2

[node name="VBoxContainer6" type="VBoxContainer" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2

[node name="VBoxContainer7" type="VBoxContainer" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
